# WebSec-Scanner

./: .gitignore  README.md  __main__.py  config.py  main.py  pyproject.toml  requirements.txt  scan_report_https_fram.co.za_.csv  scan_report_https_fram.co.za_.html  scan_report_https_fram.co.za_.json  setup.py
core/: plugin_system.py  scanner.py
dashboard/: cli.py
models/: __init__.py  result.py  target.py
modules/crawl/: api_discovery.py  base.py  crawler.py
modules/cve/: base.py  exploit_db.py  nvd.py
modules/recon/: base.py  cert_transparency.py  dns_enum.py  http_header.py  port_scan.py  ssl_tls.py  subdomain.py  tech_detect.py  waf_detect.py  whois.py
modules/vulnerability/: base.py  command_injection.py  config_checks.py  cookie_security.py  cors.py  csrf.py  graphql_check.py  host_header_injection.py  idor.py  known_vulns.py  lfi_rfi.py  nosqli.py  open_redirect.py  security_headers.py  sqli.py  ssrf.py  ssti.py  tech_vuln_scanner.py  xss.py  xxe.py
report/: base.py  csv_report.py  html_report.py  json_report.py
samples/: vulnerable_app.py
utils/: helpers.py  http_client.py  scoring.py
