[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webscanner"
version = "1.0.0"
description = "Web Vulnerability Scanner & Security Analyzer"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.scripts]
webscanner = "webscanner.main:main"
